@startuml

class Client {
	ClientID clientID
	Credentials credential
}

class Account {
	AccountRef reference
	Money balance
	AccountName name
}

class Transaction {
	Date when
	TransactionRef reference
	TransactionDescription description
	Money amount
}

class AuditItem {
	Date when
	TransactionRef reference
	TransactionDescription description
	Money amount
	AccountRef source
	AccountRef target
}

Client --* Account : "accounts"
Account --* Transaction : "transactions"
Transaction -- "1" Account : from
Transaction -- "1" Account : to

Client --* AuditItem : "audit"

@enduml